[tool.poetry]
name = "commands-base"
version = "2.0.1"
description = "Aladdin base command for commands containers"
authors = ["Fivestars <dev@fivestars.com>"]

[tool.poetry.dependencies]
python = "^3.7"
verboselogs = "^1.7"
coloredlogs = "^14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
aladdin_command = "commands_base:main"
