[tool.poetry]
name = "commands-base"
version = "2.2.0"
description = "Aladdin base command for commands containers"
authors = ["Fivestars <dev@fivestars.com>"]

[tool.poetry.dependencies]
python = "^3.8"
verboselogs = "^1.7"
coloredlogs = "^15.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aladdin_command = "commands_base:cli"
